# ft_linear_regression

./: .gitignore  CMakeLists.txt  Makefile  README.md  docker-compose.yml  graph.py  thetas.txt  thetasHisto.csv
Project/: setup.sh
Project/Bonus/: Graph.py
Project/include/: DataPoint.hpp  LinearReg.hpp  MathUtils.hpp  PredictionModel.hpp
Project/src/: LinearReg.cpp  MathUtils.cpp  predict.cpp  train.cpp
docker/: clean.sh
docker/projectenv/: Dockerfile
include/: CsvUtils.hpp  LinearReg.hpp  PredictionModel.hpp  Theta.hpp
src/: CsvUtils.cpp  LinearReg.cpp  PredictionModel.cpp  main.cpp  predict.cpp  predict.csv  thetas.txt  train.cpp
